--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
-  "name": "rate-repository-app",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.9"
-  },
-  "private": true
+	"name": "rate-repository-app",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start",
+		"android": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+		"ios": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+		"web": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --web"
+	},
+	"dependencies": {
+		"@expo/webpack-config": "^0.17.2",
+		"expo": "~47.0.12",
+		"expo-status-bar": "~1.4.2",
+		"react": "18.1.0",
+		"react-dom": "18.1.0",
+		"react-native": "0.70.5",
+		"react-native-web": "~0.18.9"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.9",
+		"babel-eslint": "^10.1.0",
+		"eslint-config-standard": "^17.0.0",
+		"eslint-config-standard-jsx": "^11.0.0",
+		"eslint-config-standard-react": "^13.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.1"
+	},
+	"private": true,
+	"eslintConfig": {
+		"parser": "@babel/eslint-parser",
+		"requireConfigFile": false,
+		"extends": [
+			"standard",
+			"standard-jsx",
+			"standard-react"
+		]
+	}
 }
