--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
 		"web": "npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start --web"
 	},
 	"dependencies": {
-		"@expo/webpack-config": "^0.17.2",
 		"expo": "~47.0.12",
 		"expo-status-bar": "~1.4.2",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
 		"react-native": "0.70.5",
-		"react-native-web": "~0.18.9"
+		"react-native-web": "~0.18.9",
+		"react-router": "^6.7.0",
+		"react-router-native": "^6.7.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.9",
+		"@expo/webpack-config": "^0.17.4",
 		"babel-eslint": "^10.1.0",
 		"eslint-config-standard": "^17.0.0",
 		"eslint-config-standard-jsx": "^11.0.0",
